hermes_fuzz_executed_few_shot_v2/fuzz_98_execution
'use strict';
function g(a) {
    return a = 4;  
}
function h() {
    return Promise.resolve({ a: Promise.resolve("OK") });
}
function i() {
    return (async () => {
        try {
            await h();
        } catch (e) {
            console.log({ e });
        }
    })();
}


Execution Output ------------------:
test.js:6:12: warning: the variable "Promise" was not declared in function "h"
    return Promise.resolve({ a: Promise.resolve("OK") });
           ^~~~~~~
test.js:9:13: error: async functions are unsupported
    return (async () => {
            ^~~~~~~~~~~~~
Emitted 1 errors. exiting.
